# KnowledgeBase

Docker/code/: .dockerignore  package.json  server.js
Docker/doc/: 01-getting-started.md  02-images-and-containers.md  03-data-and-volumes.md  04-networking.md  06-docker-compose.md  07-utility-containers.md  08-complex-setup-laravel.md  09-deploying-containers.md  intro.md
Python/basics/: booleans.py  collections_module.py  datetime_module.py  debugger_pdb.py  dictionaries.py  errors_exceptions.py  file_io.py  for_loops.py  functions.py  if_elif_else.py  list_comprehensions.py  lists.py  math_random_module.py  methods.py  numbers.py  oop_classes_attributes.py  oop_dunder_methods.py  oop_inheritance_polymorphism.py  operators.py  os_module.py  pylint_overview.py  regex_module.py  sets.py  string.py  timing_code.py  tuples.py  unittest_testing.py  variable.py  while_loops.py  zip_unzip.py
Python/docs/: BigO.md  OOPS.md  advanced_modules.md  basics.md  errors_exceptions.md  method_function.md  python_miniforge_setup.md  python_package_management.md
Python/modern_project_base/: init.md  pyproject.toml
Python/modern_project_base/src/my_package/: main.py
Python/modern_project_base/tests/: test_main.py
kubernetes/code/aws-eks/: efs-volume.yaml
kubernetes/code/configmaps/: configmap-example.yaml
kubernetes/code/deployments/: advanced-deployment.yaml  basic-deployment.yaml
kubernetes/docs/: README.md  aws-eks-deployment.md  getting-started.md  kubernetes-in-action.md  kubernetes-networking.md  managing-data-and-volumes.md
(+7 files in other folders)
